fixes banner CSS (flex property) on IE 11

--- a/assets/css/lsx.css
+++ b/assets/css/lsx.css
@@ -401,6 +401,8 @@ figure { max-width: 100%; }
 
 @media (min-width: 992px) { html:not(.ie) .page-has-banner-full .page-banner-wrap { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
 
+@media (min-width: 992px) { html.ie .page-has-banner-full .page-banner-wrap { width: 100%; } }
+
 .page-banner-wrap .page-banner { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; overflow: hidden; position: relative; width: 100%; }
 
 .home .page-banner-wrap .page-banner { min-height: 68vh; }
