--- a/assets/css/scss/layout/_banner.scss
+++ b/assets/css/scss/layout/_banner.scss
@@ -20,6 +20,12 @@
 		}
 	}
 
+	html.ie .page-has-banner-full & {
+		@include media (">=tablet") {
+			width: 100%;
+		}
+	}
+
 	.page-banner {
 		align-items: center;
 		display: flex;
